--- a/playbook3.yml
+++ b/playbook3.yml
@@ -6,8 +6,14 @@
     yum: name=docker state=present
   - name: start docker
     service: name=docker state=started
-  - name: Install
-    command: "pip install docker-py"
+  - name: install certain python modules for docker
+     pip:
+       name: "{{ item.name }}"
+       version: "{{ item.version }}"
+       state: present
+    with_items:
+     - { name: docker, version: 2.0.0 }
+     - { name: docker-py, version: 1.10.6 }
   - name: pull a docker image
     docker_image:
           name: devopsedu/webapp
